<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="p1">Popular Movies</string>
    <string name="p2">Stock Hawk</string>
    <string name="p3">Build it Bigger</string>
    <string name="p5">Make Your App Material</string>
    <string name="p4">Go Ubiquitous</string>
    <string name="p6">Capstone</string>
    <string name="heading">My Nanodegree Apps!</string>
</resources>
