<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/white"

    >  <LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="0dp"
    android:layout_weight="0.2"
    android:orientation="vertical" >
</LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/heading"
        android:id="@+id/textView"
        android:layout_marginTop="61dp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/p1"
        android:id="@+id/button"
        android:layout_marginTop="30dp"
        android:onClick="showToast"
        android:backgroundTint="#FFD54F"
        android:textColor="@color/white"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p2"
        android:id="@+id/button2"
        android:backgroundTint="#FFD54F"
        android:textColor="@color/white"

        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p3"
        android:id="@+id/button3"
        android:backgroundTint="#FFD54F"
        android:textColor="@color/white"
        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p5"
        android:id="@+id/button4"
        android:backgroundTint="#FFD54F"
        android:textColor="@color/white"

        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p4"
        android:id="@+id/button5"
        android:backgroundTint="#FFD54F"
        android:textColor="@color/white"

        android:onClick="showToast"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/p6"
        android:id="@+id/button6"
        android:backgroundTint="#FFD54F"
        android:textColor="@color/white"

        android:onClick="showToast"/>

        </LinearLayout>
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:layout_weight="0.2"
        android:orientation="vertical" >
        </LinearLayout>

</LinearLayout>
